force-app/main/default/staticresources/python/Disappear/src/objects/Journal__c.object
<CustomObject>
    <fields>
        <fullName>Accept_to_Publish_Acc_Online__c</fullName>
        <label>Accept to Publish Acc. Online</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accept_to_Publish_Acc_Print__c</fullName>
        <label>Accept to Publish Acc. Print</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accept_to_Publish_Normal_Online__c</fullName>
        <label>Accept to Publish Normal Online</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accept_to_Publish_Normal_Print__c</fullName>
        <label>Accept to Publish Normal Print</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audience__c</fullName>
        <description>Changed to multivalue picklist as per DM Defect 12</description>
        <label>Audience</label>
        <picklist>
            <picklistValues>
                <fullName>Sample Audience 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sample Audience 2</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Author_Instructions_URL__c</fullName>
        <label>Author Instructions URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_of_origin__c</fullName>
        <label>Country of origin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISI_Impact_Factor__c</fullName>
        <label>ISI Impact Factor</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indexed_BIOSIS_BA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Indexed BIOSIS/BA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indexed_CINAHL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Indexed CINAHL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indexed_Chem_Abs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Indexed Chem Abs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indexed_EMBASE_EM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Indexed EMBASE/EM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indexed_IDIS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Indexed IDIS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indexed_IPA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Indexed IPA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indexed_Medline_PubMed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Indexed Medline/PubMed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indexed_SCI_SciSearch_CC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Indexed SCI/SciSearch/CC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JournalName255__c</fullName>
        <label>JournalName255</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Journal_Abbreviation__c</fullName>
        <label>Journal Abbreviation</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Journal_Name__c</fullName>
        <description>Swapnil indicated that the vendor specified 500 as the length of the Journal Name.</description>
        <label>Journal Name</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Journal_URL__c</fullName>
        <label>Journal URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Legacy_journal_name__c</fullName>
        <label>Legacy Journal Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Publication_type_Book_Reviews__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publication type Book Reviews</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publication_type_By_lined_Articles__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publication type By-lined Articles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publication_type_Case_Reports__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publication type Case Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publication_type_Editorials__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publication type Editorials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publication_type_Letters__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publication type Letters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publication_type_Meeting_Abstracts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publication type Meeting Abstracts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publication_type_Meeting_Announcements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publication type Meeting Announcements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publication_type_Original_Research__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publication type Original Research</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publication_type_Reviews_Solicited_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publication type Reviews Solicited Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publication_type_Reviews_Solicited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publication type Reviews Solicited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publication_type_Reviews_Unsolicited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publication type Reviews Unsolicited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publication_type_Short_Communications__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publication type Short Communications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publication_type_Sp_Issues_Other_Suppl__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publication type Sp. Issues Other Suppl.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Publication_type_Spons_Supplements__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publication type Spons. Supplements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rejection_Rate_Avg__c</fullName>
        <label>Rejection Rate Avg</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejection_Rate_Lower__c</fullName>
        <label>Rejection Rate Lower</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejection_Rate_Upper__c</fullName>
        <label>Rejection Rate Upper</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiebelRowId__c</fullName>
        <externalId>true</externalId>
        <label>SiebelRowId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submit_to_Accept_Acc_Online__c</fullName>
        <label>Submit to Accept Acc. Online</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submit_to_Accept_Acc_Print__c</fullName>
        <label>Submit to Accept Acc. Print</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submit_to_Accept_Normal_Online__c</fullName>
        <label>Submit to Accept Normal Online</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submit_to_Accept_Normal_Print__c</fullName>
        <label>Submit to Accept Normal Print</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sylogent_Journal_Id__c</fullName>
        <label>Sylogent Journal Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Therapy_Area__c</fullName>
        <description>Changed to multivalue picklist as per DM Defect 12</description>
        <label>Therapy Area</label>
        <picklist>
            <picklistValues>
                <fullName>Sample Therapy Area 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sample Therapy Area 2</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Total_Submit_to_Publish_Acc_Online__c</fullName>
        <label>Total Submit to Publish Acc. Online</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Submit_to_Publish_Acc_Print__c</fullName>
        <label>Total Submit to Publish Acc. Print</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Submit_to_Publish_Normal_Online__c</fullName>
        <label>Total Submit to Publish Normal Online</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Submit_to_Publish_Normal_Print__c</fullName>
        <label>Total Submit to Publish Normal Print</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Journal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>JournalName255__c</columns>
        <columns>NAME</columns>
        <columns>Journal_Abbreviation__c</columns>
        <columns>Therapy_Area__c</columns>
        <columns>Journal_URL__c</columns>
        <columns>Country_of_origin__c</columns>
        <columns>ISI_Impact_Factor__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Journal-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Journals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>